[gd_scene load_steps=4 format=3 uid="uid://dgh8xrv7w81qm"]

[ext_resource type="Script" uid="uid://cc0djh8gi6afg" path="res://ui/inventory_ui/EquipmentContainer.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://ctwnbwnd4ou2r" path="res://assets/icons/icon.png" id="2"]
[ext_resource type="Texture2D" uid="uid://ynovd7yp0553" path="res://assets/icons/icon_32.png" id="3"]

[node name="EquipmentContainer" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1088.0
offset_bottom = -584.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_default_cursor_shape = 7
script = ExtResource("1")

[node name="Background" type="TextureRect" parent="."]
modulate = Color(0.431373, 0.431373, 0.431373, 1)
layout_mode = 2
texture = ExtResource("2")

[node name="ItemBackground" type="TextureRect" parent="."]
visible = false
modulate = Color(0.458824, 0.458824, 0.458824, 1)
layout_mode = 2
texture = ExtResource("3")

[connection signal="gui_input" from="." to="." method="on_gui_input"]
